tests/errors/unresolved-reference-behind-binary.spcasmtest
org 0
mov a,+(6+something)
